# Ludwig-Jam-2023

./: .gitattributes  .gitignore  README.md
PythonDev/: .gitignore  pyproject.toml  requirements.txt  transformers_export.py
PythonDev/data/: banned_words.txt
PythonDev/data/starting_words/: words_catlike.txt  words_creative.txt  words_generic.txt
PythonDev/scripts/: auto_correct_mock.py  eval.py  evaluation_mock.ipynb  gpt_next_word.py  gpt_next_word_check.ipynb  spell_checker_mock.py
UnityProject/: .gitignore
UnityProject/Assets/: packages.config
UnityProject/Assets/Animations/Paw/: Mouse.controller  tap.anim
UnityProject/Assets/Data/: keyboard.txt
UnityProject/Assets/Plugins/: Microsoft.AI.MachineLearning.lib
UnityProject/Assets/Prefabs/: Paw.prefab  Post.prefab  SuggestedWord.prefab  Topic.prefab
UnityProject/Assets/Prefabs/old_ui/: Comment.prefab  Post.prefab  SuggestedWord.prefab
UnityProject/Assets/Prefabs/ui/: Post.prefab  SuggestedWord.prefab  Topic.prefab  TopicInfo.prefab
UnityProject/Assets/Resources/Data/: commentors.txt
UnityProject/Assets/Resources/GPT/: banned_words.txt
UnityProject/Assets/Scenes/: CommentorsHelperTest.unity  Game.unity  NewGPT.unity  RobertTesting.unity  SampleScene.unity  SampleSuggestion.unity  WordLikelihood.unity
UnityProject/Assets/Scripts/: GPT2Demo.cs  GPTHelper.cs  Tweet.cs  TweetManager.cs  UIManager.cs  WordLikelihoodHelper.cs
UnityProject/Assets/UI/: ShantellSans-Italic SDF.asset  ShantellSans-Regular SDF.asset  ShantellSans-SemiBold SDF.asset
UnityProject/ProjectSettings/: ProjectSettings.asset
(+37 files in other folders)
