[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aiforunity"
version = "0.0.1"
description = "A package for Unity to use AI models."
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "transformers",
    "transformers[onnx]",
    "onnx",
    "onnxruntime",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "flake8-bugbear",
    "flake8-broken-line",
    "flake8-comprehensions",
    "pep8-naming",
    "pyproject-flake8",
    "ipykernel",
]

[tool.flake8]
max-line-length = 120
# This ignore is required by black.
extend-ignore = "E203,E501"

[tool.black]
line-length = 120
target-version = ["py310"]